k3d/develop-cluster/data/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: book
  name: book-service
spec:
  ports:
  - port: 3000
    targetPort: 3000
  selector:
    app: book-pod
  type: ClusterIP
