k3d/develop-cluster/data/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: book-ingress
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: book-service
                port:
                  number: 3000
